# embodied_vision

./: .clang-format  .gitignore  CHANGELOG.md  README.md  embodied_vision_burst_strategy.md  embodied_vision_product_strategy.md  ros2_thor_porting_analysis.md
.github/workflows/: ci.yml
docs/api_reference/: engineering_spec_b.md
docs/developer_guide/: architecture.md  calibration.md  getting_started.md
docs/hardware/: engineering_spec_a.md  engineering_spec_c.md
reimbursement-agent/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md  run_reimbursement.sh
reimbursement-agent/memory/: 2026-04-06.md
reimbursement-agent/skills/approval-tracker/: SKILL.md  list.py  submit.py  update.py
reimbursement-agent/skills/email-collector/: SKILL.md  collect.py  utils.py  zip_handler.py
reimbursement-agent/skills/form-filler/: SKILL.md  fill_form.py
reimbursement-agent/skills/invoice-classifier/: SKILL.md  classify.py  classify.py.bak  extract_amount.py  fix_pdf_summary.py
reimbursement-agent/skills/invoice-reader/: advanced_ocr.py  read_with_minimax.py
reimbursement-agent/skills/receipt-ocr/: SKILL.md  parse_receipt.py
scripts/: build.sh  setup_workspace.sh
src/stereo_vision_calibration/: README.md  package.xml  setup.py
src/stereo_vision_calibration/scripts/: export_onnx.py  online_calibrator.py  train_confidence.py
src/stereo_vision_driver/: CMakeLists.txt  package.xml
src/stereo_vision_driver/config/: params.yaml
src/stereo_vision_driver/include/stereo_vision/: confidence_onnx.hpp  stereo_camera.hpp  stereo_depth.hpp
src/stereo_vision_driver/include/stereo_vision/hardware/: camera_types.hpp  capture_base.hpp  imu_bmi088.hpp  nv_nvmedia_capture.hpp  v4l2_capture.hpp
src/stereo_vision_driver/launch/: driver.launch.py
src/stereo_vision_driver/msg/: StereoCalibrationInfo.msg  StereoDeviceStatus.msg
src/stereo_vision_driver/src/: stereo_camera_impl.cpp  stereo_camera_node.cpp  stereo_depth.cpp
src/stereo_vision_driver/src/hardware/: confidence_onnx.cpp  hardware_factory.cpp  hardware_selector.cpp  imu_bmi088.cpp  nv_nvmedia_capture.cpp  v4l2_capture.cpp
src/stereo_vision_driver/test/: test_stereo_depth.cpp
src/stereo_vision_msgs/: CMakeLists.txt  package.xml
src/stereo_vision_msgs/msg/: StereoCalibrationInfo.msg
