<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stereo_vision_calibration</name>
  <version>0.1.0</version>
  <description>
    Embodied Vision 标定工具链
    包含：工厂标定、在线标定、ONNX训练、模型导出
  </description>
  <maintainer email="contact@embodiedvision.com">Embodied Vision Team</maintainer>
  <license>MIT</license>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
